fix: unintented gray border visible on some browsers

--- a/src/preflight.css
+++ b/src/preflight.css
@@ -18,6 +18,7 @@ a {
 
 button {
 	cursor: pointer;
+	border-width: 0;
 }
 
 :disabled {
